force-app/main/default/objects/Post_Attachment__c/Post_Attachment__c.object-meta.xml
<CustomObject>
    <label>Post Attachment</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Post Attachment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>