force-app/main/default/objects/Post_Attachment__c/fields/Attached_By__c.field-meta.xml
<CustomField>
    <fullName>Attached_By__c</fullName>
    <label>Attached By</label>
    <length>20</length>
    <type>Text</type>
</CustomField>