force-app/main/default/objects/Post_Attachment__c/fields/Attachment_Path__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Path__c</fullName>
    <label>Attachment Path</label>
    <length>100</length>
    <type>Text</type>
</CustomField>