force-app/main/default/objects/Post_Attachment__c/fields/Attachment_Title__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Title__c</fullName>
    <label>Attachment Title</label>
    <length>20</length>
    <type>Text</type>
</CustomField>