force-app/main/default/objects/Post_Attachment__c/fields/Post__c.field-meta.xml
<CustomField>
    <fullName>Post__c</fullName>
    <label>Post</label>
    <referenceTo>Post__c</referenceTo>
    <relationshipLabel>Post Attachments</relationshipLabel>
    <relationshipName>Post_Attachments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>